html pages/connection of database
added html pages for each attribute, modified /chemecar/settings.py and /chemecardb/views.py to help merge database, created html code to display database info
note: there are some conflicts...

--- a/chemecardb/templates/chemecardb/nav1.html
+++ b/chemecardb/templates/chemecardb/nav1.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>sector selection</title>
     </head>
 
     <body>
+        chose a sector:
         <a href='/chemecardb/roster'><b>roster</b></a>
-        <a href='/chemecardb/schedule'><b>schedule</b></a>
-        <a href='/chemecardb/materials'><b>materials</b></a>
+        <a href='/chemecardb/scheduling'><b>schedule</b></a>
+        <a href='/chemecardb/material'><b>materials</b></a>
         <a href='/chemecardb/car'><b>car</b></a>
     </body>
 </html>
