--- a/chemecardb/templates/chemecardb/powmech.html
+++ b/chemecardb/templates/chemecardb/powmech.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>cheme car database</title>
+        <title>power mechanism</title>
     </head>
 
     <body>
-        chose a year:
-        <a href='/chemecardb/nav1'><b>2018</b></a>
+        trials page:
+        <a href='/chemecardb/trial'><b>trials</b></a>
     </body>
 </html>
