--- a/chemecardb/templates/chemecardb/members.html
+++ b/chemecardb/templates/chemecardb/members.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>cheme car database</title>
+        <title>members</title>
     </head>
 
     <body>
-        chose a year:
-        <a href='/chemecardb/nav1'><b>2018</b></a>
+        members page
     </body>
 </html>
