--- a/chemecardb/templates/chemecardb/roster.html
+++ b/chemecardb/templates/chemecardb/roster.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>cheme car database</title>
+        <title>roster</title>
     </head>
 
     <body>
-        chose a year:
-        <a href='/chemecardb/nav1'><b>2018</b></a>
+        members page:
+        <a href='/chemecardb/members'><b>members</b></a>
     </body>
 </html>
