--- a/chemecardb/templates/chemecardb/stopmech.html
+++ b/chemecardb/templates/chemecardb/stopmech.html
@@ -2,11 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>cheme car database</title>
+        <title>stop mechanism</title>
     </head>
 
     <body>
-        chose a year:
-        <a href='/chemecardb/nav1'><b>2018</b></a>
+        stop mechanism page
     </body>
 </html>
