--- a/chemecardb/templates/chemecardb/scheduling.html
+++ b/chemecardb/templates/chemecardb/scheduling.html
@@ -3,9 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <title>schedule</title>
+        <style>
+            table, th, td {
+              border: 1px solid black;
+              border-collapse: collapse;
+            }
+        </style>
     </head>
 
     <body>
-        schedule page
+        {% if scheds %}
+        <table>
+            <tr>
+                <th>id</th>
+                <th>date</th>
+                <th>description</th>
+            </tr>
+            {% for item in scheds %}
+            <tr>
+                <td>{{item.0}}</td>
+                <td>{{item.1}}</td>
+                <td>{{item.2}}</td>
+            </tr>
+            {% endfor %}
+        {% else %}
+            this is broke
+        {% endif %}
     </body>
 </html>
