--- a/chemecardb/templates/chemecardb/stopmech.html
+++ b/chemecardb/templates/chemecardb/stopmech.html
@@ -3,9 +3,32 @@
     <head>
         <meta charset="UTF-8">
         <title>stop mechanism</title>
+        <style>
+            table, th, td {
+              border: 1px solid black;
+              border-collapse: collapse;
+            }
+        </style>
     </head>
 
     <body>
-        stop mechanism page
+        {% if stops %}
+        <table>
+            <tr>
+                <th>id</th>
+                <th>time</th>
+                <th>year made</th>
+            </tr>
+            {% for item in stops %}
+            <tr>
+                <td>{{item.0}}</td>
+                <td>{{item.1}}</td>
+                <td>{{item.2}}</td>
+            </tr>
+            {% endfor %}
+        {% else %}
+            this is broke
+        {% endif %}
+        </table>
     </body>
 </html>
