changed user and passwd
^^^

--- a/chemecardb/templates/chemecardb/members.html
+++ b/chemecardb/templates/chemecardb/members.html
@@ -66,7 +66,7 @@
             {% csrf_token %}
             UPDATE: comp id to be updated
             <input type="text" name="textfield7" size="10">
-            updates (sample: fname='sam', major='comp sci', grad_year=2018)
+            comma-separated list of updates (sample: fname='sam', major='comp sci', grad_year=2018)
             <input type="text" name="textfield8" size="30">
 
             <button type="submit">edit student</button>
