--- a/chemecardb/templates/chemecardb/scheduling.html
+++ b/chemecardb/templates/chemecardb/scheduling.html
@@ -32,11 +32,11 @@
             <form method="POST" action="{% url 'insertsched' %}">
             {% csrf_token %}
             INSERT: sched id
-            <input type="text" name="textfield1" size="10">
+            <input type="text" name="textfield0" size="10">
             sched name
-            <input type="text" name="textfield2" size="10">
+            <input type="text" name="textfield1" size="10">
             sched desctiption
-            <input type="text" name="textfield3" size="10">
+            <input type="text" name="textfield2" size="10">
             <button type="submit">add schedule</button>
         </form>
         
@@ -47,7 +47,7 @@
             DELETE: sched id
             <input type="text" name="textfield6" size="10">
              
-            <button type="submit">delete student</button>
+            <button type="submit">delete schedule</button>
         </form>
 
         <br>
@@ -59,7 +59,7 @@
             comma-separated list of updates (sample: sched id='123', description='proposal deadline')
             <input type="text" name="textfield8" size="30">
 
-            <button type="submit">edit student</button>
+            <button type="submit">edit schedule</button>
         </form>
     </body>
 </html>
