--- a/chemecardb/templates/chemecardb/scheduling.html
+++ b/chemecardb/templates/chemecardb/scheduling.html
@@ -33,9 +33,9 @@
             {% csrf_token %}
             INSERT: sched id
             <input type="text" name="textfield0" size="10">
-            sched name
+            sched description
             <input type="text" name="textfield1" size="10">
-            sched desctiption
+            sched date
             <input type="text" name="textfield2" size="10">
             <button type="submit">add schedule</button>
         </form>
