--- a/chemecardb/templates/chemecardb/scheduling.html
+++ b/chemecardb/templates/chemecardb/scheduling.html
@@ -33,10 +33,13 @@
             {% csrf_token %}
             INSERT: sched id
             <input type="text" name="textfield0" size="10">
-            sched description
-            <input type="text" name="textfield1" size="10">
             sched date
+            <input type="text" name="textfield1" size="10">
+            sched description
             <input type="text" name="textfield2" size="10">
+                sched year
+                <input type="text" name="textfield3" size="10">
+
             <button type="submit">add schedule</button>
         </form>
         
