--- a/chemecardb/templates/chemecardb/powmech.html
+++ b/chemecardb/templates/chemecardb/powmech.html
@@ -36,5 +36,8 @@
 
         trials page:
         <a href='/chemecardb/trial'><b>trials</b></a>
+
+        power mechanism and trial queries:
+        <a href='/chemecardb/powmechq'><b>queries</b></a>
     </body>
 </html>
