--- a/chemecardb/templates/chemecardb/roster.html
+++ b/chemecardb/templates/chemecardb/roster.html
@@ -36,5 +36,8 @@
         
         members page:
         <a href='/chemecardb/members'><b>members</b></a>
+
+        roster and member queries:
+        <a href='/chemecardb/rosterq'><b>queries</b></a>
     </body>
 </html>
