--- a/chemecardb/templates/chemecardb/stopmech.html
+++ b/chemecardb/templates/chemecardb/stopmech.html
@@ -30,5 +30,8 @@
             this is broke
         {% endif %}
         </table>
+
+        stop mechanism queries:
+        <a href='/chemecardb/stopmechq'><b>queries</b></a>
     </body>
 </html>
