--- a/chemecardb/templates/chemecardb/roster.html
+++ b/chemecardb/templates/chemecardb/roster.html
@@ -44,7 +44,7 @@
             <input type="text" name="textfield3" size="10">
             role
             <input type="text" name="textfield4" size="10">
-            for credit
+            for credit (1 for yes, 0 for no)
             <input type="text" name="textfield5" size="10">
              
             <button type="submit">add roster</button>
