please learn how to spell
chose to choose

--- a/chemecardb/templates/chemecardb/nav1.html
+++ b/chemecardb/templates/chemecardb/nav1.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        chose a sector:
+        choose a sector:
         <a href='/chemecardb/roster'><b>roster</b></a>
         <a href='/chemecardb/scheduling'><b>schedule</b></a>
         <a href='/chemecardb/material'><b>materials</b></a>
