--- a/chemecardb/templates/chemecardb/powmech.html
+++ b/chemecardb/templates/chemecardb/powmech.html
@@ -46,7 +46,7 @@
             <input type="text" name="textfield3" size="10">
             current
             <input type="text" name="textfield4" size="10">
-            <button type="submit">add stop_mech</button>
+            <button type="submit">add pow_mech</button>
         </form>
         
         <br>
